--- a/assets/style.css
+++ b/assets/style.css
@@ -1,23 +1,28 @@
+:root {
+    --text-color:#DBE4EF;
+    --card-front-color:#144480;
+    --card-back-color:#00F4BF;
+}
+
 body {
-    background-color: bisque;
+    background:url('img/bg-desktop.webp');
     font-family: Bai Jamjuree;
 }
 
 #container {
-    display: flex; /* Elementos dispostos em linha */
+    display: flex;
 }
 
 .cartao {
     margin: 1rem 1rem;
-    background-color: aqua;
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
 }
 
 .cartao__conteudo {
+    background-color: var(--card-front-color);
     text-align: center;
-    /* background-color: aquamarine; */
     height: 100%;
 }
 
@@ -35,11 +40,6 @@ body {
     margin-top: 1rem;
     padding: 2rem;
 }
-
-
-
-
-
 
 
 footer {
